# i-doit-python

./: .gitignore  LICENSE  README.md  build_and_upload_live.sh  build_and_upload_test.sh  new_release.sh  pyproject.toml  test_install.sh
example/: find_double_vlans.py  find_double_vlans_in_8_dateien.py  fix_lat_lon.py  get_dialog.py  get_network.py  get_vlan.py  idoit.json.example  set_ip_address.py  set_logical_port.py  set_network_port.py  show_logical_network_ports.py
src/idoit_scaleup/: __init__.py  api_log.py  base.py  cat_access.py  cat_application.py  cat_connector.py  cat_cpu.py  cat_ip.py  cat_location.py  cat_memory.py  cat_network.py  cat_network_log_port.py  cat_networkport.py  cat_power_consumer.py  cat_racktables.py  cat_storage_device.py  cat_vlan.py  category.py  conditional_read.py  consts.py  dialog.py  object.py
