[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idoit_scaleup"
version = "0.0.5"
authors = [
  { name="Sven Anders", email="sanders@scaleuptech.com" },
]
description = "i-doit pythonapi"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ScaleUp-Technologies/i-doit-python"
"Bug Tracker" = "https://github.com/ScaleUp-Technologies/i-doit-python/issues"
